tests/snapshots/gql_snapshots__parse_match_anonymous_node_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: ast
---
match_clause:
  patterns:
    - elements:
        - Node:
            variable: ~
            labels:
              - Person
            properties: []
optional_match_clauses: []
where_clause: ~
return_clause:
  distinct: false
  items:
    - expression:
        Literal:
          String: found
      alias: ~
group_by_clause: ~
order_clause: ~
limit_clause: ~
