tests/snapshots/gql_snapshots__parse_match_delete_multiple_vertices_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: stmt
---
Mutation:
  match_clause:
    patterns:
      - elements:
          - Node:
              variable: a
              labels:
                - Person
              properties: []
          - Edge:
              variable: r
              labels:
                - KNOWS
              direction: Outgoing
              quantifier: ~
              properties: []
          - Node:
              variable: b
              labels:
                - Person
              properties: []
  optional_match_clauses: []
  where_clause: ~
  mutations:
    - Delete:
        variables:
          - r
  return_clause: ~
