tests/snapshots/gql_snapshots__parse_match_delete_single_vertex_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: stmt
---
Mutation:
  match_clause:
    patterns:
      - elements:
          - Node:
              variable: p
              labels:
                - Person
              properties:
                - - name
                  - String: Alice
              where_clause: ~
  optional_match_clauses: []
  where_clause: ~
  mutations:
    - Delete:
        variables:
          - p
  foreach_clauses: []
  return_clause: ~
