tests/snapshots/gql_snapshots__parse_match_detach_delete_multiple_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: stmt
---
Mutation:
  match_clause:
    patterns:
      - elements:
          - Node:
              variable: p
              labels:
                - Person
              properties: []
              where_clause: ~
  optional_match_clauses: []
  where_clause:
    expression:
      BinaryOp:
        left:
          Property:
            variable: p
            property: inactive
        op: Eq
        right:
          Literal:
            Bool: true
  mutations:
    - DetachDelete:
        variables:
          - p
  return_clause: ~
